welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:9: error: illegal start of statement (no modifiers allowed here)
override run() {
^